# chopper

./: .env  .gitignore  CLAUDE.md  LICENSE  README.md  REMEDIATION_PLAN.md  chopper.py  docker-compose.yaml  dockerfile  pyproject.toml
.claude/: settings.local.json
chopper/: __main__.py  chopper.py
helpers/: chopper-watch.bash
public/chopper/: addresses.chopper.html  career_list.chopper.html  research_documents.chopper.html  team.chopper.html
src/chopper/: __init__.py  chopper.py  cli.py  constants.py
tests/: __init__.py  partial.chopper.html  partial.html  test_chopper_comprehensive.py  test_chopper_comprehensive.py.bak  test_helper_functions.py.bak  test_multiple_section_update.py  test_multiple_section_update.py.bak  test_reverse_sync.py  test_reverse_sync.py.bak
