[tool.poetry]
name = "chopper"
version = "0.1.0"
description = ""
authors = ["sheldon <developer@8cylinder.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"

[tool.poetry.scripts]
chopper = "chopper.__main__:main"

[project.scripts]
chopper = "chopper.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
