[project]
name = "chopper"
version = "0.2.0"
description = "Chop up files and put the parts in various places."
readme = "README.md"
authors = [
    { name = "Sheldon McGrandle", email = "developer@8cylinder.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "watchdog>=6.0.0",
]

[project.scripts]
chopper = "chopper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
