[project]
name = "chopper"
version = "0.3.0"
description = "Chop up files and put the parts in various places."
readme = "README.md"
authors = [
    { name = "Sheldon McGrandle", email = "developer@8cylinder.com" }
]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Operating System :: MacOS',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Intended Audience :: Developers',
    'Natural Language :: English',
]
requires-python = ">=3.11"
dependencies = [
    "click>=8",
    "python-dotenv>=1.0.1",
    "typing-extensions>=4.12.2",
    "watchdog>=6.0.0",
]

[project.scripts]
chopper = "chopper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.30.0",
    "mypy>=1.13.0",
    "pudb>=2024.1.3",
    "pytest>=7.0.0",
    "ruff>=0.9.4",
]

[project.urls]
Homepage = "https://github.com/8cylinder/chopper"
Issues = "https://github.com/8cylinder/chopper/issues"
